[package]
name = "delta_s3_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
warp = { version = "0.3.7", features = ["trace"] }
aws-config = { version = "1", features = ["behavior-version-latest", "credentials-process", "sso", "rustls"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
deltalake = { version = "0.30.1", features = ["s3"] }
lru = "0.12.3"
moka = { version = "0.12", features = ["sync"] }
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls", "stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
futures-util = "0.3.31"
url = "2.5.0"
http = "0.2"
aws-smithy-types = "1.3.6"
config = "0.15.19"
sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
cached = { version = "0.52.0", features = ["proc_macro", "async"] }
async-trait = "0.1"
prometheus = "0.14.0"

[dev-dependencies]
hyper = "0.14"
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest", "test-util"] }
aws-smithy-http-client = { version = "1.1.5" , features = ["test-util"]}
mockito = "1.4.0" 
